# python-json-patch-typestub

./: LICENSE  pyproject.toml
jsonpatch-stubs/: __init__.pyi
