[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "types-jsonpatch"
version = "0.1.0"
description = "Type stub for jsonpatch"
authors = [{name = "Léo El Amri", email = "leo@superlel.me"}]
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "jsonpatch ==1.32",
]

[tool.flit.module]
name = "jsonpatch-stubs"
