[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "types-jsonpatch"
version = "0.1.0-alpha.0"
description = "Type stub for jsonpatch"
authors = [{name = "Léo El Amri", email = "leo@superlel.me"}]
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "jsonpatch ==1.32",
]

[project.urls]
Source = "https://github.com/lel-amri/python-json-patch-typestub"

[tool.flit.module]
name = "jsonpatch-stubs"
